esp32_qemu_mock/build/log/idf_py_stdout_output_25560
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\tejas\AnnsetuNewApp\esp32_qemu_mock\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.5.5-2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/tejas/AnnsetuNewApp/esp32_qemu_mock/build/bootloader/bootloader.bin"
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20260121\xtensa-esp-elf\bin\xtensa-esp32-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.5\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/tejas/AnnsetuNewApp/esp32_qemu_mock/build/config -IC:/Users/tejas/AnnsetuNewApp/esp32_qemu_mock/main -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_hw_support/debug_probe/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_hw_support/mspi_timing_tuning/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_hw_support/power_supply/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_hw_support/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/heap/tlsf -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/soc/esp32/register -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_rom/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_rom/esp32/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/mqtt/esp-mqtt/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/tcp_transport/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp-tls -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp-tls/esp-tls-crypto -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/mbedtls/port/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/mbedtls/mbedtls/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/mbedtls/mbedtls/library -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/mbedtls/esp_crt_bundle/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/mbedtls/mbedtls/3rdparty/everest/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/mbedtls/mbedtls/3rdparty/p256-m -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_timer/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_https_ota/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_http_client/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/bootloader_support/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/bootloader_support/bootloader_flash/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_bootloader_format/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_app_format/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_eth/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_driver_spi/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/app_update/include -IC:/Espressif/frameworks/esp-idf-v5.5.5-2/components/json/cJSON @"C:/Users/tejas/AnnsetuNewApp/esp32_qemu_mock/build/toolchain/cxxflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/tejas/AnnsetuNewApp/esp32_qemu_mock=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.5.5-2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c C:/Users/tejas/AnnsetuNewApp/esp32_qemu_mock/main/main.cpp
C:/Users/tejas/AnnsetuNewApp/esp32_qemu_mock/main/main.cpp: In function 'void init_qemu_ethernet()':
C:/Users/tejas/AnnsetuNewApp/esp32_qemu_mock/main/main.cpp:110:26: error: 'esp_eth_mac_new_openeth' was not declared in this scope; did you mean 'esp_eth_mac_new_esp32'?
  110 |     esp_eth_mac_t *mac = esp_eth_mac_new_openeth(&mac_config);
      |                          ^~~~~~~~~~~~~~~~~~~~~~~
      |                          esp_eth_mac_new_esp32
C:/Users/tejas/AnnsetuNewApp/esp32_qemu_mock/main/main.cpp:119:11: warning: unused variable 'glpi' [-Wunused-variable]
  119 |     void *glpi = NULL; // Glue logic for QEMU openeth usually not needed for ESP-IDF v5+
      |           ^~~~
ninja: build stopped: subcommand failed.
